Fix whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -667,9 +667,7 @@ ul {
 ::marker {
   color: orange;
 }
-ol > li::marker {
-  content: counters(ordered, '.')
-}
+ol > li::marker { content: counters(ordered, '.') }
 summary::marker
   { content: '🔴' }
 dd, dt, li
